Fix v-align when expanded. Add README. Fix window width edge case.

--- a/client/statuswolf.css
+++ b/client/statuswolf.css
@@ -95,9 +95,13 @@ button {
 
 .expanded-status {
     margin-right: 5%;
-    width: 95%; /* TODO: Make this 100% at some point */
+    width: 98%; /* TODO: Make this 100% at some point */
     height: 12em;
     background-color: #5C5A4F; /* TODO: This is too close to the menu button's gray */
+}
+
+.expanded-status .valign-wrapper, .expanded-status h3 {
+    height: 9em !important;
 }
 
 .status .valign-wrapper {
@@ -137,7 +141,19 @@ button {
     color: red;
 }
 
-@media (max-width: 1100px) {
+@media (min-width: 1710px) {
+    .status {
+        width: 32% !important;
+    }
+
+    .status .valign-wrapper, .status h3 {
+        width: auto;
+        max-width: auto;
+        padding-right: 5%;
+    }
+}
+
+@media (max-width: 1210px) {
     .status {
         width: 96% !important;
     }
@@ -148,7 +164,7 @@ button {
     }
 }
 
-@media (max-width: 1100px) and (max-device-width: 720px) {
+@media (max-width: 1210px) and (max-device-width: 720px) {
     body {
         font-size: 1.5em;
     }
@@ -158,7 +174,7 @@ button {
     }
 }
 
-@media (max-width: 1100px) and (max-device-width: 720px) and (orientation: portrait) {
+@media (max-width: 1210px) and (max-device-width: 720px) and (orientation: portrait) {
     body {
         font-size: 2em;
     }
